{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "GameProcess",
            "id": "19cee7e5-ff18-4e37-b731-8c67151a5320",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "Button",
                    "id": "356d261b-ce71-45c7-9bda-cb8927a29e4c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "f858ae87-ea65-4da5-8d6d-436b2d8bfa66",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a1fe759f-82ab-4d34-a4e0-3fd181c271e6",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eb7a655c-f6d4-49fb-abc6-49b0c3c6609c",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}